crates/test-files/fixtures/compile_errors/call_create2_with_wrong_type.fe
contract Bar:
    pass

contract Foo:

    pub fn foo():
        Bar.create2(true, 1)
